exports[`Actions: App RESET_RULE_FILTERS matches snapshot 1`] = `
Object {
  "type": "RESET_RULE_FILTERS",
}
`;

exports[`Actions: App RESET_STATE matches snapshot 1`] = `
Object {
  "type": "RESET_STATE",
}
`;

exports[`Actions: App SELECT_ALL_FILTERS matches snapshot 1`] = `
Object {
  "type": "SELECT_ALL_FILTERS",
}
`;

exports[`Actions: App SET_SNIPPET_KEY creates correct action object 1`] = `
Object {
  "payload": "szechuan sauce",
  "type": "SET_SNIPPET_KEY",
}
`;

exports[`Actions: App async actions deleteSnippet() dispatches the correct actions if the action fails 1`] = `
Array [
  Object {
    "payload": "Deleting...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "payload": "Failed to delete snippet; please try again",
    "type": "ADD_NOTIFICATION",
  },
]
`;

exports[`Actions: App async actions deleteSnippet() dispatches the correct actions if the action succeeded 1`] = `
Array [
  Object {
    "payload": "Deleting...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "CLOSE_NOTIFICATION",
  },
  Object {
    "payload": "Snippet Deleted!",
    "type": "ADD_NOTIFICATION",
  },
]
`;

exports[`Actions: App async actions saveNew() dispatches SAVE_FAILED if save failed 1`] = `
Array [
  Object {
    "payload": "Saving...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "payload": "Failed to save snippet; please try again",
    "type": "ADD_NOTIFICATION",
  },
]
`;

exports[`Actions: App async actions saveNew() dispatches SAVE_SUCCEEDED if saved 1`] = `
Array [
  Object {
    "payload": "Saving...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "CLOSE_NOTIFICATION",
  },
  Object {
    "payload": "Codesplaination Saved!",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "SAVE_SUCCEEDED",
  },
]
`;
